kubernetes/apps/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: taskapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: yicheung/task-backend:v1
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: taskapp
spec:
  selector:
    app: backend
  ports:
  - port: 8000
    targetPort: 8000
